--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tensify",
   "version": "0.0.1",
   "description": "Convert verbs from present to past tense",
-  "main": "index.js",
+  "main": "src/inflector.js",
   "directories": {
     "test": "test"
   },
